--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -267,6 +267,7 @@
     font-size: 2rem;
     margin-left: auto;           /* pushes it to the right */
     margin-right: 55px;         /* removes any right gap */
+    padding: 20px 0;
   ">
     <!-- Hamburger lines (visible when closed) -->
   <span class="bar top-bar" style="
