--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -240,7 +240,7 @@
   left: 0;
   right: 0;
   height: 60px;
-  background: rgba(40, 40, 40, 0.75);
+  background: rgba(40, 40, 40, 0.95);
   z-index: 1000;
   display: flex;
   align-items: center;
@@ -268,6 +268,7 @@
     margin-left: auto;           /* pushes it to the right */
     margin-right: 55px;         /* removes any right gap */
     padding: 20px 0;
+    z-index: 1001;
   ">
     <!-- Hamburger lines (visible when closed) -->
   <span class="bar top-bar" style="
@@ -351,6 +352,7 @@
     background: rgba(40, 40, 40, 0.95);
     display: none;
     flex-direction: column;
+    align-items: center;
     gap: 16px;
     padding: 20px;
     z-index: 999;
