--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -239,8 +239,8 @@
   /* Reset all sidebar-related spacing on main content */
   .main-content,
   body > div:not(.mobile-menu):not(header):not(aside) {
-    padding-left: 16px !important;
-    padding-right: 16px !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
     width: 100% !important;
     max-width: 100% !important;
     float: none !important;
