--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -241,6 +241,7 @@
   body > div:not(.mobile-menu):not(header):not(aside) {
     margin-right: 5 !important;
     margin-left: 5 !important;
+    padding: 0 5px;
     width: 100% !important;
     max-width: 100% !important;
     float: none !important;
