--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -702,8 +702,7 @@
   </h2>
   <p>Nad srednjom Europom se prema istoku kretala dolina, odnosno prodor u sklopu kojeg je u prizemlju bila vezana hladna fronta. Po visini je ispred prodora bilo prisutno snažno jugozapadno strujanje, 
     a prolazak fronte se preko naših krajeva očekivao u poslijepodnevnim satima. 
-  <img src="images/20230713/sinoptika.png" alt="ERA5"></img>
-  Modeli su simulirali konvektivnu energiju u vrijednostima od 1500 do 2000 J/kg u kombinaciji s DLS-om od 25 - 30 m/s.
+  <img src="images/20230713/sinoptika.png" alt="ERA5"></img> Modeli su simulirali konvektivnu energiju u vrijednostima od 1500 do 2000 J/kg u kombinaciji s DLS-om od 25 - 30 m/s.
   ESTOFEX je za unutrašnjost Hrvatske izdao Level 2 i Level 3 (najviši stupanj rizika).</p>
   <img src="images/20230713/forecast.png" alt="ESTOFEX"></img>
     
