--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lov na oluje 13.07.2023.</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/images/favicon.png">
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1200px; margin: 0 auto; background-color: #313131; color: #ffffff;}
     h1, h2, h3, h4, p, li, span, em, strong {
