--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -750,9 +750,18 @@
   </div>
   
 <footer style="
-  background: #222;
-  padding: 10px 0px 0px;
-  text-align: center;
+position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 20px;
+  background: rgba(40, 40, 40, 0.95);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
   font-size: 0.9rem;
   color: #aaa;
   border-top: 2px solid #444;
