--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -270,6 +270,7 @@
   justify-content: space-between;
   padding: 0 20px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  border-bottom: 2px solid #444;
 ">
   <!-- Left: Custom logo (click → home) -->
   <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
@@ -750,7 +751,6 @@
   </div>
   
 <footer style="
-position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
@@ -758,11 +758,11 @@ position: fixed;
   background: rgba(40, 40, 40, 0.95);
   z-index: 1000;
   display: flex;
-  align-items: center;
+  text-align: center;
   justify-content: space-between;
   padding: 0 20px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   color: #aaa;
   border-top: 2px solid #444;
 ">
