--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -751,12 +751,13 @@
   </div>
   
 <footer style="
+  positon:static;
   bottom: 0;
   left: 0;
   right: 0;
   height: 20px;
   background: rgba(40, 40, 40, 0.95);
-  z-index: 1000;
+  z-index: 1001;
   display: flex;
   text-align: center;
   justify-content: space-between;
