--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -753,15 +753,11 @@
 <footer style="
   positon:sticky;
   bottom: 0;
-  left: 0;
-  right: 20;
+  margin-right:150px;
   height: 20px;
   background: rgba(40, 40, 40, 0.95);
   z-index: 1001;
-  display: flex;
   text-align: center;
-  justify-content: space-between;
-  padding: 0 20px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.3);
   font-size: 0.7rem;
   color: #aaa;
