--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -719,7 +719,13 @@
   ">
     Tijek chase-a
   </h2>
-    
+  <p>Moj lov je započeo u Zagrebu nešto iza 14h. U to vrijeme su se već razvile oluje u Sloveniji,
+    a najveći potencijal je pokazala ćelija istočno od Ljubljane koja je u to vrijeme počela jačati.</p> 
+  <img src="images/20230713/radarstart.gif" alt="radar"></img>
+  <p>Oluje su se kretale brzo, oko 70 km/h, pa sam ju umjesto kod Zaprešića, odlučio presresti istočno od Zagreba kako 
+    se kasnije kod praćenja oluje prema istoku ne bi morao brinuti o gustom prometu na obilaznici. 
+    Oko 14:55h sam se pozicionirao u Kominu.</p> 
+  <img src="images/20230713/radarstart.gif" alt="radar"></img>
   <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
