--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -569,7 +569,7 @@
   ">
     Chase karta
   </h2>
-  <p><em>Zagreb (početak chase-a) → Komin → pozicioniranje kod Popovca → Čazma (kraj chase-a) → nazad do Zagreba [Ukupno: 180 km]</em></p>
+  <p>Zagreb (početak chase-a) → Komin → pozicioniranje kod Popovca → Čazma (kraj chase-a) → nazad do Zagreba [Ukupno: 180 km]</p>
 
   <!-- Leaflet CSS + JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
@@ -724,9 +724,17 @@
   <img src="images/20230713/radarstart.gif" alt="radar"></img>
   <p>Oluje su se kretale brzo, oko 70 km/h, pa sam ju umjesto kod Zaprešića, odlučio presresti istočno od Zagreba kako 
     se kasnije kod praćenja oluje prema istoku ne bi morao brinuti o gustom prometu na obilaznici. 
-    Oko 14:55h sam se pozicionirao u Kominu.</p> 
-  <img src="images/20230713/radarstart.gif" alt="radar"></img>
-  <div class="gallery">
+    Oko 14:55h sam se pozicionirao u Kominu. Oluja je još bila predaleko da bi se vidjela.</p> 
+  <img src="images/20230713/komin.png" alt="komin"></img>
+  <p>15-tak minuta kasnije, nove radarske slike su otkrile da oluja počinje skretati u desno, 
+    što je značilo da nisam u dobroj poziciji. Morao sam se repozicionirati južnije.
+    U to vrijeme ESTOFEX izdaje mezoskalnu diskusiju koja obuhvaća cijelu unutrašnjost Hrvatske.</p>
+  <img src="images/20230713/mesoscale.png" alt="ESTOFEX"></img>
+  <p>U diskusiji se navodi da superćelije iz Slovenije idu prema Hrvatskoj te se očekuje da će ili 
+    zadržati svoju jačinu ili još i dodatno ojačati. To je bilo podržano činjenicom da je zagrebačka
+    sondaža u 14h (ispred superćelije) izmjerila vrlo povoljne parametre za superćelije → SBCAPE 2000 J/kg i DLS 28 m/s.</p>
+  <img src="images/20230713/mesoscale.png" alt="ESTOFEX"></img>
+    <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
     <img src="images/hvar-sunset.jpg" alt="Sunset on Hvar">
