--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -732,8 +732,8 @@
   <img src="images/20230713/mesoscale.png" alt="ESTOFEX"></img>
   <p>U diskusiji se navodi da superćelije iz Slovenije idu prema Hrvatskoj te se očekuje da će ili 
     zadržati svoju jačinu ili još i dodatno ojačati. To je bilo podržano činjenicom da je zagrebačka
-    sondaža u 14h (ispred superćelije) izmjerila vrlo povoljne parametre za superćelije → SBCAPE 2000 J/kg i DLS 28 m/s.</p>
-  <img src="images/20230713/mesoscale.png" alt="ESTOFEX"></img>
+    sondaža u 14h (ispred superćelije) izmjerila vrlo povoljne parametre → SBCAPE 2000 J/kg i DLS 28 m/s.</p>
+  <img src="images/20230713/sondaza.png" alt="Sondaza"></img>
     <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
