--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -730,8 +730,8 @@
     što je značilo da nisam u dobroj poziciji. Morao sam se repozicionirati južnije.
     U to vrijeme ESTOFEX izdaje mezoskalnu diskusiju koja obuhvaća cijelu unutrašnjost Hrvatske.</p>
   <img src="images/20230713/mesoscale.png" alt="ESTOFEX"></img>
-  <p>U diskusiji se navodi da superćelije iz Slovenije idu prema Hrvatskoj te se očekuje da će ili 
-    zadržati svoju jačinu ili još i dodatno ojačati. To je bilo podržano činjenicom da je zagrebačka
+  <p>U diskusiji se navodi kako superćelije iz Slovenije idu prema Hrvatskoj te se očekuje da će, ili 
+    zadržati svoju jačinu, ili još i dodatno ojačati. To je bilo podržano činjenicom da je zagrebačka
     sondaža u 14h (ispred superćelije) izmjerila vrlo povoljne parametre → SBCAPE 2000 J/kg i DLS 28 m/s.</p>
   <img src="images/20230713/sondaza.png" alt="Sondaza"></img>
     <div class="gallery">
