--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -734,6 +734,9 @@
     zadržati svoju jačinu, ili još i dodatno ojačati. To je bilo podržano činjenicom da je zagrebačka
     sondaža u 14h (ispred superćelije) izmjerila vrlo povoljne parametre → SBCAPE 2000 J/kg i DLS 28 m/s.</p>
   <img src="images/20230713/sondaza.png" alt="Sondaza"></img>
+  <p>Oko 15:30h nalazim se u Popovcu s otvorenim pogledom prema Medvednici i nadolazećoj superćeliji.
+    U to vrijeme ćelija ulazi iz Sloveniju u Hrvatsku, te iako još daleko, počinje se nadzirati južni kraj oluje.</p>
+  <img src="images/20230713/IMG_22232.jpg" alt="Superćelija1"></img>
     <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
