--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -736,7 +736,7 @@
   <img src="images/20230713/sondaza.png" alt="Sondaza"></img>
   <p>Oko 15:30h nalazim se u Popovcu s otvorenim pogledom prema Medvednici i nadolazećoj superćeliji.
     U to vrijeme ćelija ulazi iz Sloveniju u Hrvatsku, te iako još daleko, počinje se nadzirati južni kraj oluje.</p>
-  <img src="images/20230713/IMG_22232.jpg" alt="Superćelija1"></img>
+  <img src="images/20230713/popovec1.png" alt="Superćelija1"></img>
     <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
