--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -738,10 +738,14 @@
     U to vrijeme ćelija ulazi iz Sloveniju u Hrvatsku, te iako još daleko, počinje se nadzirati južni kraj oluje.</p>
   <img src="images/20230713/radar1.gif" alt="Radar1"></img>
   <img src="images/20230713/popovec1.png" alt="Superćelija1"></img>
+  <p>Prije nailaska superćelije do glavnog grebena Medvednice, ispod baze oblaka se kratkotrajno razvio wall cloud, 
+    pojačavajući njezinu vizualnu strukturu.</p>
+  <img src="images/20230713/IMG_22232.jpg" alt="Superćelija2"></img>
+  <p>Prelaskom preko grebena Medvednice, wall cloud se raspada zbog ometanja inflow-a. 
+    Zbog toga superćelija vizualno gubi na strukturi, iako je i dalje jasno vidljva baza i kišno-tučonosne zavjese.</p> 
     <div class="gallery">
-    <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
-    <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
-    <img src="images/hvar-sunset.jpg" alt="Sunset on Hvar">
+    <img src="images/20230713/IMG_22232.jpg" alt="Superćelija3">
+    <img src="images/20230713/dubrovnik-walls.jpg" alt="Superćelija4">
   </div>
 
   <h2>Daily notes</h2>
