--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -747,7 +747,7 @@
     <img src="images/20230713/IMG_22242.jpg" alt="Superćelija3">
     <img src="images/20230713/IMG_22302.jpg" alt="Superćelija4">
   </div>
-
+  <img src="images/20230713/radar2.gif" alt="Radar2"></img>
   <h2>Daily notes</h2>
   <ul>
     <li>Day 1: Arrival to Split, waterfront promenade...</li>
