--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -747,7 +747,17 @@
     <img src="images/20230713/IMG_22242.jpg" alt="Superćelija3">
     <img src="images/20230713/IMG_22302.jpg" alt="Superćelija4">
   </div>
-  <img src="images/20230713/radar2.gif" alt="Radar2"></img>
+  <p>Radar je sugerirao da oluja nije oslabila prelaskom preko Medvednice i nešto prije 16h mi se u potpunosti približila.</p> 
+    <img src="images/20230713/radar2.gif" alt="Radar2"></img>
+  <div class="gallery">
+    <img src="images/20230713/IMG_22322.jpg" alt="Superćelija5">
+    <img src="images/20230713/IMG_22352.jpg" alt="Superćelija6">
+  </div>
+  <p>U to vrijeme shvaćam da sam napravio grešku zbog previše razmišljanja i neodlučnosti. Greška je bila što nisam na vrijeme krenuo na drugu poziciju.
+    Imao sam opciju nastaviti autocestom i brzom cestom prema Vrbovcu što bi me postavilo ispred superćelije na slijedeću poziciju, ali taj prozor je prošao jer je sada bilo prekasno i oluja bi me zahvatila.</p>
+  <img src="images/20230713/popovec2.png" alt="Superćelija7">
+  <p>Jedina druga opcija je bila ići obilazno autocestom A3 do Ivanić Grada, pa po D43 stići do Čazme i presresti superćeliju između Čazme i Bjelovara. 
+    Znao sam odmah da će to biti vrlo teško postići, što zbog prometa, što zbog brzog kretanja oluje. No svejedno sam htio pokušati.</p>
   <h2>Daily notes</h2>
   <ul>
     <li>Day 1: Arrival to Split, waterfront promenade...</li>
