--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -755,9 +755,13 @@
   </div>
   <p>U to vrijeme shvaćam da sam napravio grešku zbog previše razmišljanja i neodlučnosti. Greška je bila što nisam na vrijeme krenuo na drugu poziciju.
     Imao sam opciju nastaviti autocestom i brzom cestom prema Vrbovcu što bi me postavilo ispred superćelije na slijedeću poziciju, ali taj prozor je prošao jer je sada bilo prekasno i oluja bi me zahvatila.</p>
-  <img src="images/20230713/popovec2.png" alt="Superćelija7">
+  <img src="images/20230713/popovec2.png" alt="Superćelija7"></img>
   <p>Jedina druga opcija je bila ići obilazno autocestom A3 do Ivanić Grada, pa po D43 stići do Čazme i presresti superćeliju između Čazme i Bjelovara. 
-    Znao sam odmah da će to biti vrlo teško postići, što zbog prometa, što zbog brzog kretanja oluje. No svejedno sam htio pokušati.</p>
+    Znao sam odmah da će to biti vrlo teško postići, što zbog prometa, što zbog brzog kretanja oluje. No svejedno sam htio pokušati.
+    Dolaskom do Ivanića, ponovno sam uspostavio vizualni kontakt s superćelijom. Iako teško vidljivo kroz kameru, uživo je bilo jasno da je u zadnjih 20 minuta razvila novi wall cloud ispod baze.</p>
+  <img src="images/20230713/ivanic1.png" alt="Superćelija8"></img>
+  <p>Da sam na vrijeme krenuo prema Vrbovcu, mogao sam imati ovakav pogled. Nepoznati autor, slikano iz okolice Vrbovca oko 16:20h:</p>
+  <img src="images/20230713/Vrbovec.jpg" alt="Superćelija9"></img>
   <h2>Daily notes</h2>
   <ul>
     <li>Day 1: Arrival to Split, waterfront promenade...</li>
