--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -759,6 +759,7 @@
   <p>Jedina druga opcija je bila ići obilazno autocestom A3 do Ivanić Grada, pa po D43 stići do Čazme i presresti superćeliju između Čazme i Bjelovara. 
     Znao sam odmah da će to biti vrlo teško postići, što zbog prometa, što zbog brzog kretanja oluje. No svejedno sam htio pokušati.
     Dolaskom do Ivanića, ponovno sam uspostavio vizualni kontakt s superćelijom. Iako teško vidljivo kroz kameru, uživo je bilo jasno da je u zadnjih 20 minuta razvila novi wall cloud ispod baze.</p>
+  <img src="images/20230713/radar3.gif" alt="Radar3"></img>
   <img src="images/20230713/ivanic1.png" alt="Superćelija8"></img>
   <p>Da sam na vrijeme krenuo prema Vrbovcu, mogao sam imati ovakav pogled. Nepoznati autor, slikano iz okolice Vrbovca oko 16:15h:</p>
   <img src="images/20230713/Vrbovec.jpg" alt="Superćelija9"></img>
