--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -763,6 +763,8 @@
   <img src="images/20230713/ivanic1.png" alt="Superćelija8"></img>
   <p>Da sam na vrijeme krenuo prema Vrbovcu, mogao sam imati ovakav pogled. Nepoznati autor, slikano iz okolice Vrbovca oko 16:15h:</p>
   <img src="images/20230713/Vrbovec.jpg" alt="Superćelija9"></img>
+  <p>Nažalost prilaskom prema Čazmi shvaćam da ipak neću stići ispred superćelije koja će proći tik sjeverno od Čazme. Stižem u Čazmu u 16:40h i oluja taman prolazi sjeverno od grada.
+  Na desnoj strani se još vide dijelovi baze, a iza nje guste bijele tučonosne zavjese.</p>
   <h2>Daily notes</h2>
   <ul>
     <li>Day 1: Arrival to Split, waterfront promenade...</li>
