--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -765,6 +765,7 @@
   <img src="images/20230713/Vrbovec.jpg" alt="Superćelija9"></img>
   <p>Nažalost prilaskom prema Čazmi shvaćam da ipak neću stići ispred superćelije koja će proći tik sjeverno od Čazme. Stižem u Čazmu u 16:40h i oluja taman prolazi sjeverno od grada.
   Na desnoj strani se još vide dijelovi baze, a iza nje guste bijele tučonosne zavjese.</p>
+  <img src="images/20230713/radar4.gif" alt="Radar4"></img>
   <h2>Daily notes</h2>
   <ul>
     <li>Day 1: Arrival to Split, waterfront promenade...</li>
