--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -766,6 +766,9 @@
   <p>Nažalost prilaskom prema Čazmi shvaćam da ipak neću stići ispred superćelije koja će proći tik sjeverno od Čazme. Stižem u Čazmu u 16:40h i oluja taman prolazi sjeverno od grada.
   Na desnoj strani se još vide dijelovi baze, a iza nje guste bijele tučonosne zavjese.</p>
   <img src="images/20230713/radar4.gif" alt="Radar4"></img>
+  <img src="images/20230713/IMG_22372.jpg" alt="Superćelija10"></img>
+  <p>U Čazmi sam još ostao neko vrijeme, s lijepim pogledom na stražni dio ćelije i updraft koji je dosezao 12 km visine.</p>  
+  <img src="images/20230713/IMG_22432.jpg" alt="Superćelija11"></img>
   <h2>Daily notes</h2>
   <ul>
     <li>Day 1: Arrival to Split, waterfront promenade...</li>
