--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -763,7 +763,7 @@
   <img src="images/20230713/ivanic1.png" alt="Superćelija8"></img>
   <p>Da sam na vrijeme krenuo prema Vrbovcu, mogao sam imati ovakav pogled. Nepoznati autor, slikano iz okolice Vrbovca oko 16:15h:</p>
   <img src="images/20230713/Vrbovec.jpg" alt="Superćelija9"></img>
-  <p>Nažalost prilaskom prema Čazmi shvaćam da ipak neću stići ispred superćelije koja će proći tik sjeverno od Čazme. Stižem u Čazmu u 16:40h i oluja taman prolazi sjeverno od grada.
+  <p>Nažalost prilaskom Čazmi shvaćam da ipak neću stići ispred superćelije koja će proći tik sjeverno od Čazme. Stižem u Čazmu u 16:40h i oluja taman prolazi sjeverno od grada.
   Na desnoj strani se još vide dijelovi baze, a iza nje guste bijele tučonosne zavjese.</p>
   <img src="images/20230713/radar4.gif" alt="Radar4"></img>
   <img src="images/20230713/IMG_22372.jpg" alt="Superćelija10"></img>
