--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -769,12 +769,10 @@
   <img src="images/20230713/IMG_22372.jpg" alt="Superćelija10"></img>
   <p>U Čazmi sam još ostao neko vrijeme, s lijepim pogledom na stražni dio ćelije i updraft koji je dosezao 12 km visine.</p>  
   <img src="images/20230713/IMG_22432.jpg" alt="Superćelija11"></img>
-  <h2>Daily notes</h2>
-  <ul>
-    <li>Day 1: Arrival to Split, waterfront promenade...</li>
-    <li>Day 3: Ferry to Hvar, lavender fields...</li>
-    <!-- add more -->
-  </ul>
+  <p>Nakon toga je krenuo novi slabiji razvoj u Sloveniji pa sam oko 19h kod Zagreba dočekao slabije ćelije koje se nisu uspjevale konkretno razviti. Ali barem je bilo nekoliko lijepih CG munja.</p>
+  <img src="images/20230713/zagreb1.jpg" alt="Zagreb1"></img>
+  <p>Oko 20:30h Zagreb zahvaća jedan slabiji linijski sustav sa shelf cloudom. Ovo je bio kraj chase-a.</p>
+  <img src="images/20230713/IMG_22562.jpg" alt="Zagreb2"></img>
   <!-- small blue Home button -->
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
