--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -770,7 +770,7 @@
   <p>U Čazmi sam još ostao neko vrijeme, s lijepim pogledom na stražni dio ćelije i updraft koji je dosezao 12 km visine.</p>  
   <img src="images/20230713/IMG_22432.jpg" alt="Superćelija11"></img>
   <p>Nakon toga je krenuo novi slabiji razvoj u Sloveniji pa sam oko 19h kod Zagreba dočekao slabije ćelije koje se nisu uspjevale konkretno razviti. Ali barem je bilo nekoliko lijepih CG munja.</p>
-  <img src="images/20230713/zagreb1.jpg" alt="Zagreb1"></img>
+  <img src="images/20230713/zagreb1.png" alt="Zagreb1"></img>
   <p>Oko 20:30h Zagreb zahvaća jedan slabiji linijski sustav sa shelf cloudom. Ovo je bio kraj chase-a.</p>
   <img src="images/20230713/IMG_22562.jpg" alt="Zagreb2"></img>
   <!-- small blue Home button -->
