--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                  '<img src="images/20230713/zagreb-thumb.jpg" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
                  '<p style="margin:4px 0; font-size:13px;">Superćelija kod Popovca i Čazme</p>' +
-                 '<a href="stormchasetest.html" target="_blank" ' +
+                 '<a href="20230713.html" target="_blank" ' +
                     'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                            'text-decoration:none; border-radius:4px; font-weight:bold;">' +
                     'Pročitajte blog →' +
@@ -87,7 +87,7 @@
                  '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
                  '<p style="margin:4px 0; font-size:13px;">Superćelija kod Popovca i Čazme</p>' +
-                 '<a href="stormchasetest.html" target="_blank" ' +
+                 '<a href="20230713.html" target="_blank" ' +
                     'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                            'text-decoration:none; border-radius:4px; font-weight:bold;">' +
                     'Pročitajte blog →' +
