--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
     // Common starting/routing points (reusable for all chases)
     var zagreb = [45.7994, 15.9786];
     var zagrebistok = [45.8008, 16.0546];
-    var komin = [46.0018, 16.2822];
-    var popovec = [45.8532, 16.1388];
-    var cazma = [45.7524, 16.6085];
-    var NPivanicgrad = [45.6907, 16.3909];
+    var komin2023 = [46.0018, 16.2822];
+    var popovec2023 = [45.8532, 16.1388];
+    var cazma2023 = [45.7524, 16.6085];
+    var NPivanicgrad2023 = [45.6907, 16.3909];
+    var obrez2018 = [45.7251, 15.9451];
+    var petrinjci2018 = [45.3708, 16.5057];
 
     // Scalable array of chases – add more objects here for new chases
     var chases = [
       {
-        location: popovec,  // Popovec location
+        location: popovec2023,  // Popovec location
         tooltip: "Lov na oluje 13.07.2023. (Popovec)",
         popup: '<div style="text-align:center; min-width:180px;">' +
                  '<h4 style="margin:8px 0 4px;">Lov na oluje 13.07.2023.</h4>' +
@@ -76,11 +78,11 @@
                     'Pročitajte blog →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, zagrebistok, komin, popovec, NPivanicgrad, cazma],  // Route for this chase
+        waypoints: [zagreb, zagrebistok, komin2023, popovec2023, NPivanicgrad2023, cazma2023],  // Route for this chase
         maxWidth: 220
       },
       {
-        location: cazma,  // New marker at Cazma
+        location: cazma2023,  // New marker at Cazma
         tooltip: "Lov na oluje 13.07.2023. (Čazma)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
                  '<h4 style="margin:8px 0 4px;">Lov na oluje 13.07.2023.</h4>' +
@@ -93,17 +95,26 @@
                     'Pročitajte blog →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, zagrebistok, komin, popovec, NPivanicgrad, cazma],  // Same route as popovec marker
+        waypoints: [zagreb, zagrebistok, komin2023, popovec2023, NPivanicgrad2023, cazma2023],  // Same route as popovec marker
+        maxWidth: 220
+      },
+      {
+        location: obrez2018,  // New marker at Odranski Obrež
+        tooltip: "Lov na oluje 08.06.2018. (Odranski Obrež)",
+        popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
+                 '<h4 style="margin:8px 0 4px;">Lov na oluje 08.06.2018.</h4>' +
+                 '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
+                      'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
+                 '<p style="margin:4px 0; font-size:13px;">Superćelije u središnjoj Hrvatskoj</p>' +
+                 '<a href="20230713.html" target="_blank" ' +
+                    'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
+                           'text-decoration:none; border-radius:4px; font-weight:bold;">' +
+                    'Pročitajte blog →' +
+                 '</a>' +
+               '</div>',
+        waypoints: [zagreb, obrez2018, petrinjci2018],
         maxWidth: 220
       }
-      // Add more chases here as needed, e.g.:
-      // {
-      //   location: [new lat, new lng],
-      //   tooltip: "New chase title",
-      //   popup: 'Custom popup HTML',
-      //   waypoints: [zagreb, new_via1, new_via2, [new lat, new lng]],
-      //   maxWidth: 220
-      // }
     ];
 
     // Loop through chases to create markers dynamically (scalable)
