--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     var cazma2023 = [45.7524, 16.6085];
     var NPivanicgrad2023 = [45.6907, 16.3909];
     var obrez2018 = [45.7251, 15.9451];
+    var buzin2018 = [45.7517, 15.9888];
     var petrinjci2018 = [45.3708, 16.5057];
 
     // Scalable array of chases – add more objects here for new chases
@@ -112,7 +113,7 @@
                     'Pročitajte blog →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, obrez2018, petrinjci2018],
+        waypoints: [zagreb, buzin2018, obrez2018, petrinjci2018],
         maxWidth: 220
       }
     ];
