--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
                '</div>',
         waypoints: [zagreb, buzin2018, obrez2018, petrinjci2018],
         maxWidth: 220
+      },
+      {
+        location: petrinjci2018,  // New marker at Petrinjci
+        tooltip: "Lov na oluje 08.06.2018. (Petrinjci)",
+        popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
+                 '<h4 style="margin:8px 0 4px;">Lov na oluje 08.06.2018.</h4>' +
+                 '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
+                      'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
+                 '<p style="margin:4px 0; font-size:13px;">Superćelije u središnjoj Hrvatskoj</p>' +
+                 '<a href="20230713.html" target="_blank" ' +
+                    'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
+                           'text-decoration:none; border-radius:4px; font-weight:bold;">' +
+                    'Pročitajte blog →' +
+                 '</a>' +
+               '</div>',
+        waypoints: [zagreb, buzin2018, obrez2018, petrinjci2018],
+        maxWidth: 220
       }
     ];
 
