--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         tooltip: "Lov na oluje 08.06.2018. (Odranski Obrež)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
                  '<h4 style="margin:8px 0 4px;">Lov na oluje 08.06.2018.</h4>' +
-                 '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
+                 '<img src="images/20180608/obrez-thumb.png" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
                  '<p style="margin:4px 0; font-size:13px;">Superćelije u središnjoj Hrvatskoj</p>' +
                  '<a href="20230713.html" target="_blank" ' +
@@ -121,7 +121,7 @@
         tooltip: "Lov na oluje 08.06.2018. (Petrinjci)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
                  '<h4 style="margin:8px 0 4px;">Lov na oluje 08.06.2018.</h4>' +
-                 '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
+                 '<img src="images/20180608/petrinjci-thumb.png" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
                  '<p style="margin:4px 0; font-size:13px;">Superćelije u središnjoj Hrvatskoj</p>' +
                  '<a href="20230713.html" target="_blank" ' +
