--- a/20230713.html
+++ b/20230713.html
@@ -773,6 +773,37 @@
   <img src="images/20230713/zagreb1.png" alt="Zagreb1"></img>
   <p>Oko 20:30h Zagreb zahvaća jedan slabiji linijski sustav sa shelf cloudom. Ovo je bio kraj chase-a.</p>
   <img src="images/20230713/IMG_22562.jpg" alt="Zagreb2"></img>
+  <div style="margin: 40px 0;">
+  <h2 style="
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 800;
+  margin-bottom: 8px;
+  ">
+    Youtube video
+  </h2>
+
+  <!-- Responsive wrapper -->
+  <div style="
+    position: relative;
+    padding-bottom: 56.25%;   /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    background: #000;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+  ">
+    <iframe 
+      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+      src="https://www.youtube.com/embed/2QyhQ_ii0vI" 
+      title="Storm chase video"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
   <!-- small blue Home button -->
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
