Update background image and route details in HTML

--- a/20180608.html
+++ b/20180608.html
@@ -405,7 +405,7 @@
   margin-left: calc(-50vw + 50%);   /* centers it perfectly and extends full width */
   margin-right: calc(-50vw + 50%);
   margin-top: 0;
-  background-image: url('images/20230713/background13072023.jpg');
+  background-image: url('images/20180608/background08062018.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -569,7 +569,7 @@
   ">
     Chase karta
   </h2>
-  <p>Zagreb (početak chase-a) → Komin → pozicioniranje kod Popovca → Čazma (kraj chase-a) → nazad do Zagreba [Ukupno: 180 km]</p>
+  <p>Zagreb (početak chase-a) → Odranski Obrež → Petrinjci (kraj chase-a) → nazad do Zagreba [Ukupno: 175 km]</p>
 
   <!-- Leaflet CSS + JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
